...
            android:hint="@string/nama_ibu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama_ibu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
...
            android:hint="@string/nik"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_data">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtnik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
...
            android:hint="@string/nik"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_kk">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtkk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
...
            app:startIconDrawable="@drawable/ic_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tanggal_lahir">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDoB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:clickable="true"
                tools:ignore="SpeakableTextPresentCheck"
...
            android:layout_margin="20dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_tempat_tinggal_sekarang"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/provinceSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:prompt="@id/tv_address"
            app:layout_constraintTop_toBottomOf="@id/tv_address"
            app:layout_constraintBottom_toBottomOf="@id/tv_alamat"
...
            android:hint="@string/edt_alamat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alamat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
...
            android:hint="@string/tb_cm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tb">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck"/>

...
            android:hint="@string/bb_kg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bb">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_bb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck"/>

...
            android:hint="@string/diagnosa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_diagnosa">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_diagnosa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck"/>

...
            app:startIconDrawable="@drawable/ic_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Tanggal_Kunjungan">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTanggalKunjungan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:clickable="true"
                tools:ignore="SpeakableTextPresentCheck"
...
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_Tanggal_Kunjungan_berikutnya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_kunjungan_berikutnya"
            android:layout_margin="20dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tanggal_kunjungan_layout"/>

        <com.google.android.material.textfield.TextInputLayout
...
            android:hint="@string/nomor_hp_wa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_WA">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_wa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck"/>

...
